# microsoft-oauth-rust

./: .gitignore  Cargo.toml
src/: auth.rs  error.rs  lib.rs  main.rs  xbox.rs  xsts.rs
