[package]
name = "microsoft_oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"

isahc = { version = "1.6.0", features = ["json"]}
warp = "0.3.2"
actix-web = "3"
tokio = { version = "1.17", features = [ "full" ] }
tracing = "0.1.31"
serde_json = "1.0.79"
webbrowser = "0.6.0"
rand = "0.8.5"
sha2 = "0.10.2"
base64-url = { version = "1" }
serde = { version = "1.0.136", features = ["derive"] }
