[package]
name = "microsoft_oauth"
version = "0.1.0"
edition = "2021"

[lib]
name = "microsoft_oauth_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"

isahc = { version = "1.6.0", features = ["json"]}
warp = "0.3.2"

tokio = { version = "1.17", features = [ "rt" ] }
tracing = "0.1.31"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
webbrowser = "0.6.0"

rand = "0.8.5"
sha2 = "0.10.2"
base64-url = { version = "1" }
